  * Enhance dpkg-shlibdeps to not fail immediatly when a library is not found.
    Instead continue and fail after all problems have been reported. Thanks
    to Chris Baines <cbaines8@gmail.com> for the patch. Closes: #596841
  * Fix dpkg-source to not list Debian packaging files as modified
    upstream files in Format "1.0" when unpacking to a non-standard
    directory.

  [ Updated programs translations ]
  * Portuguese (Miguel Figueiredo).
  * Spanish (Javier Fernandez-Sanguino).
  * Swedish (Peter Krefting).

  [ Updated man page translations ]
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

  [ Updated dselect translations ]
  * Spanish (Javier Fernandez-Sanguino).

 -- Guillem Jover <guillem@debian.org>  Thu, 29 Jul 2010 11:00:22 +0200

dpkg (1.15.8.8) unstable; urgency=low

  [ Guillem Jover ]
  * Truncate the output part file on “dpkg-split -s”. Regression introduced
    with the C rewrite.

  [ Updated man page translations ]
  * Two typos fixed in French (Christian Perrier, thanks to Julien
    Valroff).

  [ Raphaël Hertzog ]
  * Fix multiple security issues with dpkg-source (CVE-2010-1679):
    - Enhance checks to catch maliciously crafted patches which could modify
      files outside of the unpacked source package.
    - Do not consider a top-level symlink like a directory when
      extracting a tarball.
    - Exclude .pc while extracting the upstream tarball in 3.0 (quilt)
      as patch blindly writes in that directory during unpack (and would
      follow any existing symlink).

 -- Raphaël Hertzog <hertzog@debian.org>  Thu, 06 Jan 2011 21:04:33 +0100

dpkg (1.15.8.7) unstable; urgency=low

  [ Guillem Jover ]
  * Defer symlink renames so that there's never a point were a symlink
    is broken, this is particularly important for shared libraries.
    Closes: #605536
  * On Linux use sync_file_range() to initiate asynchronous writeback