@@ -895,13 +895,7 @@ tar_deferred_extract(struct fileinlist *files, struct pkginfo *pkg)
   struct filenamenode *usenode;
   const char *usename;
 
-#if defined(USE_SYNC_SYNC)
-  debug(dbg_general, "deferred extract mass sync");
-  if (!fc_unsafe_io)
-    sync();
-#else
   tar_writeback_barrier(files, pkg);
-#endif
 
   for (cfile = files; cfile; cfile = cfile->next) {
     debug(dbg_eachfile, "deferred extract of '%.255s'", cfile->namenode->name);
@@ -914,7 +908,6 @@ tar_deferred_extract(struct fileinlist *files, struct pkginfo *pkg)
 
     setupfnamevbs(usename);
 
-#if !defined(USE_SYNC_SYNC)
     if (cfile->namenode->flags & fnnf_deferred_fsync) {
       int fd;
 
@@ -930,7 +923,6 @@ tar_deferred_extract(struct fileinlist *files, struct pkginfo *pkg)
 
       cfile->namenode->flags &= ~fnnf_deferred_fsync;
     }
-#endif
 
     debug(dbg_eachfiledetail, "deferred extract needs rename");
 
