@@ -36,6 +36,10 @@ dpkg (1.16.0) UNRELEASED; urgency=low
     upstream files in Format "1.0" when unpacking to a non-standard
     directory.
 
+  [ Jonathan Nieder ]
+  * Remove support for use of synchronous sync(2), due to its pernicious
+    side-effects and to ease maintenance.
+
   [ Updated programs translations ]
   * Portuguese (Miguel Figueiredo).
   * Spanish (Javier Fernandez-Sanguino).
